fix center category on mobile

--- a/app/styles/sass/blocks/section/section.sass
+++ b/app/styles/sass/blocks/section/section.sass
@@ -377,9 +377,6 @@
         +media(991px)
             max-width: 650px
 
-        +media($mobile-md)
-            text-align: center
-
 .section--open-category
     padding-top: calc(var(--pt-intro) - 30px)
 
